--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__
 .idea
 build
 data
+logs
 dist
 venv
 wilds.egg-info
@@ -13,13 +14,3 @@ new-input.txt
 original-input.txt
 refactored-input.txt
 simple_program.py
-data-aug
-data500
-data500-aug
-data1500
-data1500-aug
-data1500-aug-all
-data24k
-data24k-aug
-additional
-nohup.out
